@@ -4,9 +4,10 @@
 	<td align="center" class="mono" style="font-size:11px">{BLOCK_HASH}
 	<td align="right">{BLOCK_TXS}
 	<td align="right"><b>{BLOCK_SIZE}</b>
+	<td align="center"><!--BLOCK_VERSION-->
+	<td align="center">{BLOCK_REWARD}
+	<td class="mono" nowrap="nowrap">{BLOCK_MINER}
 	<td align="right"><i>{TIME_TO_DOWNLOAD}</i>
 	<td align="right"><i>{TIME_TO_ACCEPT}</i>
 	<td align="right"><i>{WASTED_BLOCKS}</i>
-	<td align="center">{BLOCK_REWARD}
-	<td class="mono" nowrap="nowrap">{BLOCK_MINER}
 </tr>
